--- a/Pokeri/nbproject/private/private.properties
+++ b/Pokeri/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Janne\\AppData\\Roaming\\.tmcbeans\\dev\\build.properties
+user.properties.file=/cs/fs2/home/jilli/.netbeans/7.3.1/build.properties
